[package]
name = "gtktest"
version = "0.1.0"
authors = ["vancha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.0"
gio = "0.8.0"
libhandy = { git = "https://gitlab.gnome.org/World/Rust/libhandy-rs" }
failure = "0.1.6"
